manifest/mailhog.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: bookings
spec:
  replicas: 1
  selector:
    matchLabels:
      id: mailhog
  template:
    metadata:
      labels:
        id: mailhog
        network-policy: mailhog-policy
    spec:
      schedulerName: stork
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "id"
                  operator: In
                  values:
                  - mailhog
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: mailhog
        image: docker.io/ajoergensen/mailhog
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          exec:
            command:
              - sh
              - -ec
              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8025/|| exit 1'
          initialDelaySeconds: 7
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
              - sh
              - -ec
              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8025/ || exit 1'
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        ports:
          - name: http
            containerPort: 8025
            protocol: TCP
          - name: mail
            containerPort: 1025
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog-svc
  namespace: bookings
spec:
  type: NodePort
  sessionAffinity: None
  ports:
    - name: http
      port: 8025
      targetPort: 8025
      protocol: TCP
    - name: mail
      port: 1025
      targetPort: 1025
      protocol: TCP
  selector:
    id: mailhog
