manifest/pgpool.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgpool-svc
  namespace: bookings
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
      protocol: TCP
  selector:
    app: pgpool
---
apiVersion: v1
kind: Service
metadata:
  name: pgpool-svc-nodeport
  namespace: bookings
spec:
  type: NodePort
  sessionAffinity: None
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
      protocol: TCP
  selector:
    app: pgpool
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgpool-deployment
  namespace: bookings
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: pgpool
  template:
    metadata:
      labels: 
        app: pgpool
        network-policy: pgpool-policy
    spec:          
      #securityContext:
      #  fsGroup: 1000650000
      #  fsGroupChangePolicy: "OnRootMismatch"
      affinity:
        #Collocate the pod on a node with a postgres pod to maximize performance 
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - postgres
            topologyKey: "kubernetes.io/hostname"
            #topologyKey: topology.kubernetes.io/zone
        #Do not collocate pgpool replicas on the same node where a pgpool replica is already running
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - pgpool
            topologyKey: "kubernetes.io/hostname"
            #topologyKey: topology.kubernetes.io/zone
      containers:
        - name: pgpool
          image: docker.io/bitnami/pgpool:4.3.1
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 800m
          securityContext:
            runAsUser: postgres
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /opt/bitnami/scripts/pgpool/healthcheck.sh
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - bash
                - -ec
                - PGPASSWORD=${PGPOOL_POSTGRES_PASSWORD} psql -U "postgres" -d "postgres" -h /opt/bitnami/pgpool/tmp -tA -c "SELECT 1" >/dev/null
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
