manifest/bookins-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookings-ingress
  namespace: bookings
  annotations:
    nginx.ingress.kubernetes.io/app-root: /bookings-admin
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /bookings-admin/$2
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "bookings-admin-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "600"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
    nginx.ingress.kubernetes.io/session-cookie-path: "/bookings-admin"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-samesite: Strict
spec:
  ingressClassName: nginx
  rules:
    - host: worker1.calvarado04.com
      http:
        paths:
          - path: /bookings-admin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bookings-svc
                port: 
                  number: 8080
          - path: /bookings-admin
            pathType: Prefix
            backend:
              service:
                name: bookings-svc
                port:
                  number: 8080
