manifest/network-policies.yaml
#Default deny all traffic
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: bookings
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
#Allow access to DNS on all pods, DNS is located on each nodde and also using the default kube-system service
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-access
  namespace: bookings
spec:
  podSelector:
    matchLabels: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
    - ipBlock:
        cidr: 192.168.121.0/24
    - ipBlock:
        cidr: 10.96.0.10/32
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
    - protocol: TCP
      port: 9253
    - protocol: TCP
      port: 9153
---
#Allow port 5432 on Pods from/to itself pods, and from network-policy: pgpool-policy from the namespace golang-app
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-itself-port5432
  namespace: bookings
spec:
  podSelector:
    matchLabels:
      app: postgres
  ingress:
  - ports:
    - port: 5432
    from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookings
      podSelector:
        matchLabels:
          network-policy: postgres-sts
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookings
      podSelector:
        matchLabels:
          network-policy: pgpool-policy
  egress:
  - ports:
    - port: 5432
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookings
      podSelector:
        matchLabels:
          network-policy: postgres-sts
---
#Allow port 5432 on Pods of app: pgpool from pods on network-policy: app-golang-policy only from the namespace golang-app and allow egress traffic to network-policy: postgres-sts on namespace golang-app
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-bookings-port5432
  namespace: bookings
spec:
  podSelector:
    matchLabels:
      app: pgpool
  ingress:
  - ports:
    - port: 5432
    from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookings
      podSelector:
        matchLabels:
          network-policy: bookings-policy
  egress:
  - ports:
    - port: 5432
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookings
      podSelector:
        matchLabels:
          network-policy: postgres-sts
---
#Allow port 8080 of app id: app-golang from anywhere and allow egress traffic to network-policy: pgpool-policy on namespace golang-app
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-bookings-port8080
  namespace: bookings
spec:
  podSelector:
    matchLabels:
      id: bookings
  ingress:
  - ports:
    - port: 8080
  egress:
  - ports:
    - port: 5432
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookings
      podSelector:
        matchLabels:
          network-policy: pgpool-policy
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-mailhog-port8025-port1025
  namespace: bookings
spec:
  podSelector:
    matchLabels:
      id: mailhog
  ingress:
  - ports:
    - port: 8025
    - port: 1025
  egress:
  - ports:
    - port: 8025
    - port: 1025
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-bookings-to-mailhog
  namespace: bookings
spec:
  podSelector:
    matchLabels:
      id: bookings
  egress:
  - ports:
    - port: 8025
    - port: 1025
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bookings
      podSelector:
        matchLabels:
          network-policy: mailhog-policy
